--- a/styles.css
+++ b/styles.css
@@ -329,5 +329,28 @@ h2 {
     background-color: rgba(255, 255, 255, 0.8); /* Hover effect */
 }
 
+/* text on hover effect  */
 
+.icon-button#Vivid:hover::before,
+.icon-button#Natural:hover::before,
+.icon-button#HD:hover::before,
+.icon-button#Standard:hover::before,
+.icon-button#Desktop:hover::before,
+.icon-button#Website:hover::before,
+.icon-button#Landscape:hover::before,
+.icon-button#Portrait:hover::before,
+.icon-button#Square:hover::before {
+    content: attr(id);
+    position: absolute;
+    top: -30px; /* Adjust as needed for vertical positioning */
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%);
+    background-color: #1e2833; /* Dark background color */
+    color: #ffffff; /* White text color */
+    padding: 5px 10px; /* Padding around the text */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 0.8rem; /* Adjust font size */
+    z-index: 1; /* Ensure it's above other elements */
+}
 
+/* Hover text for specified Card-2 and Card-3 icons with increased z-index */
